# ban

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: alerts.py  analytics.py  binance.py  config.py  db.py  indicators.py  main.py  market.py  models.py  scanner.py  scoring.py
app/templates/: dashboard.html
tests/: test_scoring.py
