[project]
name = "binance-short-monitor"
version = "0.1.0"
description = "Binance USD-M perpetual futures overheat and short-opportunity monitor"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.20.0",
  "apscheduler>=3.10.4",
  "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
